crates/kdl-config-derive/tests/ui/flag_missing_neg.stderr
error: flag override requires both flag and neg_flag
 --> tests/ui/flag_missing_neg.rs:5:6
  |
5 |     #[kdl(attr, flag = "on")]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^
